@@ -3,9 +3,9 @@ package net.minecraftcapes.player;
 import com.google.gson.Gson;
 import com.mojang.blaze3d.platform.NativeImage;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.player.LocalPlayer;
 import net.minecraftcapes.MinecraftCapes;
 import net.minecraftcapes.helpers.MinecraftApi;
+import org.apache.commons.io.IOUtils;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -13,6 +13,8 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.UUID;
 
 import static net.minecraftcapes.MinecraftCapes.MINECRAFT_VERSION;
@@ -20,39 +22,27 @@ import static net.minecraftcapes.MinecraftCapes.MINECRAFT_VERSION;
 public class DownloadManager {
 
     /**
-     * Prepares the down
-     * @param playerUUID The players uuid
-     * @param playerName The players name
+     * Prepares the download
+     * @param uuid The entity uuid
+     * @param username The entity name
      * @param doRefresh Whether we are forcing an overwrite
      */
-    public static void prepareDownload(UUID playerUUID, String playerName, boolean doRefresh) {
-        LocalPlayer localPlayer = Minecraft.getInstance().player;
-
-        //Make sure player is online and not the local player in offline mode
-        if(playerUUID.version() != 4 && (localPlayer != null && !localPlayer.getUUID().equals(playerUUID))) return;
-
-        // Prep player handler
-        PlayerHandler playerHandler = PlayerHandler.get(playerUUID);
-
-        //Lets get the local players offline cape
-        if(playerUUID.version() != 4 && !playerHandler.getHasInfo() && !doRefresh) {
-            //Stop any more processing
+    public static void prepareDownload(UUID uuid, String username, boolean doRefresh) {
+        PlayerHandler playerHandler = PlayerHandler.get(uuid);
+        if (!playerHandler.getHasInfo() || doRefresh) {
             playerHandler.setHasInfo(true);
-
-            //Get UUID from API off main thread
-            Thread playerDownload = new Thread(() -> {
-                UUID uuid = MinecraftApi.getUUID(playerName);
-                if(uuid == null) return;
-                playerHandler.setPlayerUUID(uuid);
-
-                //Download!
-                DownloadManager.downloadProfile(playerHandler);
-            });
-            playerDownload.setDaemon(true);
-            playerDownload.start();
-        } else if (!playerHandler.getHasInfo() || doRefresh){
-            //Download!
-            DownloadManager.downloadProfile(playerHandler);
+            if (uuid.version() == 4) {
+                downloadProfile(playerHandler);
+            } else if (uuid.version() == 3) {
+                Thread prepareProfile = new Thread(() -> {
+                    UUID onlineUUID = MinecraftApi.getUUID(username);
+                    if(onlineUUID != null) {
+                        playerHandler.setPlayerUUID(onlineUUID);
+                        downloadProfile(playerHandler);
+                    }
+                });
+                prepareProfile.start();
+            }
         }
     }
 
@@ -61,37 +51,30 @@ public class DownloadManager {
      * @param playerHandler
      */
     private static void downloadProfile(PlayerHandler playerHandler) {
-        playerHandler.setHasInfo(true);
         Thread playerDownload = new Thread(() -> {
             byte[] playerDataBytes = downloadData("https://api.minecraftcapes.net/profile/" + playerHandler.getPlayerUUID().toString().replace("-", ""));
             if (playerDataBytes == null) return;
 
-            try {
-                String json = new String(playerDataBytes, StandardCharsets.UTF_8);
-                ProfileResult profileResult = new Gson().fromJson(json, ProfileResult.class);
+            String json = new String(playerDataBytes, StandardCharsets.UTF_8);
+            ProfileResult profileResult = new Gson().fromJson(json, ProfileResult.class);
 
-                playerHandler.setHasCapeGlint(profileResult.capeGlint);
-                playerHandler.setUpsideDown(profileResult.upsideDown);
+            playerHandler.setHasCapeGlint(profileResult.capeGlint);
+            playerHandler.setUpsideDown(profileResult.upsideDown);
 
-                // Download cape image if available
-                if (profileResult.cape_url != null) {
-                    byte[] capeBytes = downloadData(profileResult.cape_url);
-                    if (capeBytes != null) {
-                        NativeImage capeImage = NativeImage.read(new ByteArrayInputStream(capeBytes));
-                        playerHandler.applyCape(capeImage);
-                    }
+            // Download cape image if available
+            if (profileResult.cape_url != null) {
+                NativeImage capeImage = downloadOrLoad(profileResult.cape_url, "capes");
+                if (capeImage != null) {
+                    playerHandler.applyCape(capeImage);
                 }
+            }
 
-                // Download ears image if available
-                if (profileResult.ear_url != null) {
-                    byte[] earsBytes = downloadData(profileResult.ear_url);
-                    if (earsBytes != null) {
-                        NativeImage earsImage = NativeImage.read(new ByteArrayInputStream(earsBytes));
-                        playerHandler.applyEars(earsImage);
-                    }
+            // Download ears image if available
+            if (profileResult.ear_url != null) {
+                NativeImage earsImage = downloadOrLoad(profileResult.ear_url, "ears");
+                if (earsImage != null) {
+                    playerHandler.applyEars(earsImage);
                 }
-            } catch (IOException e) {
-                MinecraftCapes.getLogger().warn("Error downloading profile data", e);
             }
         });
 
@@ -99,7 +82,47 @@ public class DownloadManager {
         playerDownload.start();
     }
 
+    /**
+     * Try load the texture from cache or download it
+     * @param url
+     * @param type
+     * @return
+     */
+    private static NativeImage downloadOrLoad(String url, String type) {
+        String hash = url.substring(url.lastIndexOf('/') + 1);
+        Path cache = MinecraftCapes.getConfigDir().resolve(type).resolve(hash.length() > 2 ? hash.substring(0, 2) : "xx").resolve(hash);
+        
+        NativeImage nativeImage = null;
 
+        if(cache.toFile().exists()) {
+            try(InputStream inputStream = Files.newInputStream(cache.toFile().toPath())) {
+                nativeImage = NativeImage.read(inputStream);
+            } catch (IOException e) {
+                MinecraftCapes.getLogger().error("IOException with {}", cache);
+                MinecraftCapes.getLogger().error(e.getMessage());
+                if(cache.toFile().delete()) {
+                    return downloadOrLoad(url, type);
+                } else {
+                    return null;
+                }
+            }
+        } else {
+            byte[] imageBytes = downloadData(url);
+            if (imageBytes != null) {
+                try {
+                    Files.createDirectories(cache.getParent());
+                    Files.write(cache, imageBytes);
+                    nativeImage = NativeImage.read(new ByteArrayInputStream(imageBytes));
+                } catch (IOException e) {
+                    MinecraftCapes.getLogger().error("IOException with {}", url);
+                    MinecraftCapes.getLogger().error(e.getMessage());
+                    return null;
+                }
+            }
+        }
+
+        return nativeImage;
+    }
 
     /**
      * Downloads the data for the profile
@@ -120,7 +143,7 @@ public class DownloadManager {
 
             if (httpURLConnection.getResponseCode() / 100 == 2) {
                 try (InputStream inputStream = httpURLConnection.getInputStream()) {
-                    return inputStream.readAllBytes(); // Read fully before closing
+                    return IOUtils.toByteArray(inputStream); // Read fully before closing
                 }
             } else {
                 MinecraftCapes.getLogger().warn("minecraftcapes.net returned a {}", httpURLConnection.getResponseCode());
